# ONLINE_STORE

./: README.md  catalog.html  category.html  contacts.html  http_server.py  index.html  pyproject.toml
